--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Basic -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>showup-frontend</title>
+    <title>Just Show Up</title>
+    <meta name="description" content="Pre-book your seat before you leave home. ShowUp and arrive calmly, safely, and on time." />
+    <meta name="keywords" content="Showup, events platform, community events, conferences, seminars, church events, tech events, mobility, transport, trip, booking, ride" />
+    <meta name="author" content="Showup" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://showwup.com/" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
+    <link rel="apple-touch-icon" href="/Logo.svg" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#000000" />
+
+    <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Just Show Up" />
+    <meta property="og:description" content="Pre-book your seat before you leave home. ShowUp and arrive calmly, safely, and on time." />
+    <meta property="og:image" content="https://showwup.com/og-image.jpg" />
+    <meta property="og:url" content="https://showwup.com/" />
+    <meta property="og:site_name" content="Showup" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Just Show Up" />
+    <meta name="twitter:description" content="Pre-book your seat before you leave home. ShowUp and arrive calmly, safely, and on time." />
+    <meta name="twitter:image" content="https://showwup.com/og-image.jpg" />
+
+    <!-- Performance Optimization -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Just Show Up",
+        "url": "https://showwup.com",
+        "logo": "https://showwup.com/Logo.svg",
+        "sameAs": [
+          "https://facebook.com/yourpage",
+          "https://twitter.com/yourpage",
+          "https://instagram.com/yourpage"
+        ]
+      }
+    </script>
   </head>
+
   <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
